# Learn

./: README.md
C/Learn/ptr/: build.sh
C/Learn/ptr/src/: f.h  main.c
Haskell/Learn/: Haskell.cabal
Haskell/Learn/src/: Custom.hs  Main.hs
Haskell/Todo/pv/: CHANGELOG.md  cabal.project  pv.cabal
Haskell/Todo/pv/src/: Main.hs
Python/Project/cue_split/: cue_split.py
Python/Project/get_title/: get_title.py
RISC-V/Learn/hello_word/: README.md
RISC-V/Learn/hello_word/x32/: run.sh
RISC-V/Learn/hello_word/x64/: hello  hello.s  run.sh
Rust/Learn/Crate/bincode/: Cargo.toml  k
Rust/Learn/Crate/bincode/examples/: 2.rs  bincode.rs
Rust/Learn/Crate/byteorder/: Cargo.toml  test
Rust/Learn/Crate/crossterm/: Cargo.toml
Rust/Learn/Crate/daemoni/: Cargo.toml
Rust/Learn/Crate/dubble/: Cargo.toml
Rust/Learn/Crate/glob/: Cargo.toml
Rust/Learn/Crate/gstreamer-rs/: Cargo.toml
Rust/Learn/Crate/input/: Cargo.toml
Rust/Learn/Crate/lexopt/: Cargo.toml
Rust/Learn/Crate/minifb/: Cargo.toml
Rust/Learn/Crate/miniserd/: Cargo.toml
Rust/Learn/Crate/nom/: Cargo.toml
Rust/Learn/Crate/regex/: Cargo.toml
Rust/Learn/Crate/rhai/: Cargo.toml
Rust/Learn/Crate/rust-script/: README.md
Rust/Learn/Crate/sqlx/: Cargo.toml
Rust/Learn/Crate/syn/: Cargo.toml
Rust/Learn/Crate/tempfile/: Cargo.toml
Rust/Learn/Crate/termcolor/: Cargo.toml
Rust/Learn/Crate/textplots-rs/: Cargo.toml
Rust/Learn/Crate/tui-rs/: Cargo.toml
Rust/Learn/Crate/walkdir/: Cargo.toml
Rust/Learn/Crate/xdg_dir/: Cargo.toml
Rust/Learn/std/: Cargo.toml  README.md
Rust/Learn/std/examples/: vec.rs
Rust/Learn/std/examples/macro/test_macro/: Cargo.toml
Rust/Learn/std/examples/macro/test_macro/src/: main.rs
Rust/Learn/std/rust_2021/: Cargo.toml
Rust/Learn/std/src/: lib.rs  main.rs
Rust/Project/bar/: README.md
Rust/Project/bar_2/: Cargo.toml
Rust/Project/get_color/: Cargo.toml  README.md
Rust/Project/get_password/: Cargo.toml  README.md
Rust/Project/http_download/: Cargo.toml  README.md
Rust/Project/image_to_ascii/: Cargo.toml  README.md
Rust/Project/lines/: Cargo.toml  README.md  test.csv
Rust/Project/lines_2/: Cargo.toml
Rust/Project/music_tag/: Cargo.toml  README.md
Rust/Project/mvmore/: Cargo.toml  README.md
Rust/Project/rand_word/: Cargo.toml  test
Rust/Project/summary/: Cargo.toml  README.md
Rust/Project/todo_list/: Cargo.toml  README.md
Rust/Project/vmess_parse/: 1.json  Cargo.toml
Rust/Project/wave/: Cargo.toml
Rust/Todo/accounting/: Cargo.toml
Rust/Todo/audio/: Cargo.toml  README.md
Rust/Todo/base64/: Cargo.toml
Rust/Todo/calc/: LICENSE  README.md
Rust/Todo/card-tui/: Cargo.toml  README.md  config.toml  test
Rust/Todo/card-tui/src/: main.rs
Rust/Todo/card-tui/src/lib/: args.rs  card.rs  lib.rs  rand.rs  term.rs
Rust/Todo/cook/: Cargo.toml
Rust/Todo/fdroot/: Cargo.toml  README.md
Rust/Todo/gh_issues/: Cargo.toml
Rust/Todo/iss/: Cargo.toml  README.md
Rust/Todo/iss/src/: main.rs
Rust/Todo/kinns/: Cargo.toml  README.md
Rust/Todo/learn_async/: Cargo.toml  a
Rust/Todo/learn_async/src/: main.rs
Rust/Todo/learn_async/tests/: test.toml  test.yaml
Rust/Todo/lexer/: README.md
Rust/Todo/markdown/: Cargo.toml  w.html
Rust/Todo/mu/: Cargo.toml  README.md
Rust/Todo/rfile/: Cargo.toml
Rust/Todo/rhb/: Cargo.toml
Rust/Todo/rhb/src/: lib.rs  main.rs
Rust/Todo/rhb/src/config/: base.rs  boss.rs  tasks.rs  user.rs
Rust/Todo/rhb/src/tui/: event.rs  help.rs  input.rs  keyconfig.rs
Rust/Todo/rhb/src/utils/: time.rs
Rust/Todo/rpn/: README.md
Rust/Todo/sci/: Cargo.toml
Rust/Todo/seimg/: Cargo.toml
Rust/Todo/ser/: Cargo.toml
Rust/Todo/ser/src/: main.rs
Rust/Todo/struct_fields/: Cargo.toml
Rust/Todo/vgg/: Cargo.toml  README.md
Shell/Learn/just/: justfile
(+132 files in other folders)
