[package]
name = "card-tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"  # rand
lexopt = "0.1.0"    # args
colorsys = "0.6.4"  # hex color
toml = "0.5"    # toml
serde = { version = "1.0.130", features = ["derive"] }  # toml
dirs-next = "2.0.0" # dir
crossterm = "0.20"  # tui
unicode-width = "0.1.9" # unicode

[lib]
name = "card"
path = "src/lib/lib.rs"


