[package]
name = "iss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.3"
time = "0.3.5"
uuid = { version = "0.8.2", features = ["v4"] }
bincode = { version = "2.0.0-alpha.2", features = ["derive"],git="https://github.com/bincode-org/bincode" }
bytes = "1.1.0"
