[package]
name = "rhb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
chrono = "0.4"
dirs = "3.0.2"
futures = "0.3.16"
futures-timer = "3.0.2"
time = "0.3.5"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
