[package]
name = "bincode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-alpha.2", features = ["derive"],git="https://github.com/bincode-org/bincode" }
byteorder = "1.4.3"
