[package]
name = "test_macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
function_macro = {path = "../function_macro"}
derive_macro = {path = "../derive_macro"}
attribute_macro = {path = "../attribute_macro"}
